<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="button_add">Dodaj lokaciju</string>
    <string name="button_temperature">Temperatura</string>
    <string name="button_sun">Izlazak i zalazak sunca</string>
    <string name="button_wind">Vetar</string>
    <string name="text_view_temperature">Jedinica:</string>
    <string name="text_view_temperatura_info">Temperatura: 11 \nPritisak: 1000 \nVlažnost vazduha: 44</string>
    <string name="text_view_sun">Izlazak sunca: 06:47 \nZalazak sunca: 17:45</string>
    <string name="text_view_wind">Brzina vetra: 4.1 \nPravac: N</string>
    <string name="Belgrade">Belgrade</string>
    <string name="London">London</string>
    <string name="Paris">Paris</string>
    <string name="hint_edit_text_main">Unesite novu lokaciju</string>
    <string name="button_details">Detalji</string>
</resources>
