<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/pink_clouds">

    <!--prazan layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
    </LinearLayout>

    <!--layout sa nazivom aplikacije-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="3"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="35dp"
            android:textColor="@color/colorBlack"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/main_icon"/>
    </LinearLayout>

    <!--EditText i button-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/hint_edit_text_main"
            android:id="@+id/edit_text_location" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_add"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/main_activity_buttons"
            android:id="@+id/button_add"/>
    </LinearLayout>

    <!--ListView-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_view_main">
        </ListView>
    </LinearLayout>

</LinearLayout>