<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/pink_clouds">

   <!-- layout za lokaciju i dan-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="25dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/text_view_location"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:textSize="25dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/text_view_day"/>
    </LinearLayout>

    <!--layout za button-e-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/button_temperature"
            android:textAllCaps="false"
            android:background="@drawable/details_activity_buttons"
            android:id="@+id/button_temperature"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/button_sun"
            android:textAllCaps="false"
            android:background="@drawable/details_activity_buttons"
            android:id="@+id/button_sun"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/button_wind"
            android:textAllCaps="false"
            android:background="@drawable/details_activity_buttons"
            android:id="@+id/button_wind"/>
    </LinearLayout>

    <!--frame unutar kog imam jedan veliki layout (za ceo donji deo)-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4">

        <!--layout za temperaturu
            (podeljen na jedan vertikalni layout + TextView + spinner)-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal"
            android:id="@+id/layout_temperature">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/temperature" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/text_view_temperature"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_view_temperature"
                android:textSize="25dp"
                android:textColor="@color/colorBlack" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/details_activity_buttons"
                android:popupBackground="@color/colorLightPurple"
                android:id="@+id/spinner_degree">
            </Spinner>
        </LinearLayout>

        <!--layout za izlazak i zalazak sunca-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:id="@+id/layout_sun">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/text_view_sun"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/sunset"/>
        </LinearLayout>

        <!--layout za vetar-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="vertical"
            android:id="@+id/layout_wind">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/text_view_wind"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1.5"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:src="@drawable/wind"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>